--- a/nuspec/Frends.Community.Azure.QueueStorage.nuspec
+++ b/nuspec/Frends.Community.Azure.QueueStorage.nuspec
@@ -2,13 +2,23 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Frends.Community.Azure.QueueStorage</id>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <title>Frends Community Azure Storage Queue</title>
     <authors>HiQ Finland</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Task Azure Storage Queue operations.</description>
     <summary />
     <dependencies>
+      <dependency id="Microsoft.Azure.KeyVault.Core" version="1.0.0" />
+      <dependency id="Microsoft.Data.Edm" version="5.8.2" />
+      <dependency id="Microsoft.Data.OData" version="5.8.2" />
+      <dependency id="Microsoft.Data.Services.Client" version="5.8.2" />
+      <dependency id="Newtonsoft.Json" version="6.0.8" />
+      <dependency id="System.ComponentModel.EventBasedAsync" version="4.0.11" />
+      <dependency id="System.Dynamic.Runtime" version="4.0.0" />
+      <dependency id="System.Linq.Queryable" version="4.0.0" />
+      <dependency id="System.Net.Requests" version="4.0.11" />
+      <dependency id="System.Spatial" version="5.8.2" />
       <dependency id="WindowsAzure.Storage" version="8.7.0" />
     </dependencies>
     <frameworkAssemblies>
