--- a/nuspec/Frends.Community.Azure.QueueStorage.nuspec
+++ b/nuspec/Frends.Community.Azure.QueueStorage.nuspec
@@ -11,6 +11,10 @@
     <dependencies>
       <dependency id="Newtonsoft.Json" version="6.0.8" />
       <dependency id="WindowsAzure.Storage" version="8.7.0" />
+      <dependency id="Microsoft.Data.Services.Client" version="5.8.3" />
+      <dependency id="Microsoft.Data.Edm" version="5.8.3" />
+      <dependency id="Microsoft.Data.OData" version="5.8.3" />
+      <dependency id="System.Spatial" version="5.8.3" />
     </dependencies>
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System" targetFramework="" />
