--- a/Frends.Community.Azure.QueueStorage/Frends.Community.Azure.QueueStorage.csproj
+++ b/Frends.Community.Azure.QueueStorage/Frends.Community.Azure.QueueStorage.csproj
@@ -2,13 +2,15 @@
 
     <PropertyGroup>
         <TargetFrameworks>net471;netstandard2.0</TargetFrameworks>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageVersion>1.7.0</PackageVersion>
-        <Title>Frends Community Azure Storage Queue</Title>
-        <Authors>HiQ Finland</Authors>
-        <Description>Task for Azure Storage Queue operations</Description>
-        <Copyright>HiQ Finland</Copyright>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<Title>Frends Community Azure Storage Queue</Title>
+        <Description>Task for Azure Storage Queue operations</Description>   
+		<Authors>HiQ Finland</Authors>
+		<Copyright>HiQ Finland</Copyright>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/CommunityHiQ/Frends.Community.Azure.QueueStorage</PackageProjectUrl>
+		<IncludeSource>true</IncludeSource>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <Version>1.7.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
